--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
     </div>
 
     <div id="music-player">
-        <audio id="background-music" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" loop></audio>
+        <audio id="background-music" src="tum_se_hi.mp3" loop></audio>
         <button id="play-pause-btn"><i class="fas fa-play"></i></button>
     </div>
 
